# vvdaw

./: .gitignore  Cargo.toml  README.md  justfile
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/vvdaw-app/: Cargo.toml
crates/vvdaw-app/examples/: README.md  load_vst3.rs
crates/vvdaw-app/src/: main.rs
crates/vvdaw-audio/: Cargo.toml
crates/vvdaw-audio/src/: engine.rs  graph.rs  lib.rs  session.rs
crates/vvdaw-audio/src/builtin/: gain.rs  mixer.rs  mod.rs  pan.rs  sampler.rs
crates/vvdaw-clap/: Cargo.toml
crates/vvdaw-clap/src/: lib.rs
crates/vvdaw-comms/: Cargo.toml
crates/vvdaw-comms/src/: lib.rs
crates/vvdaw-core/: Cargo.toml
crates/vvdaw-core/src/: lib.rs
crates/vvdaw-plugin/: Cargo.toml
crates/vvdaw-plugin/src/: lib.rs
crates/vvdaw-ui/: Cargo.toml
crates/vvdaw-ui-3d/: Cargo.toml  README.md
crates/vvdaw-ui-3d/examples/: highway.rs  highway_wav.rs
crates/vvdaw-ui-3d/src/: camera.rs  file_loading.rs  highway.rs  lib.rs  menu.rs  playback.rs  scene.rs  waveform.rs
crates/vvdaw-ui/src/: lib.rs  ui.rs
crates/vvdaw-vst3/: Cargo.toml  TESTING.md  build.rs
crates/vvdaw-vst3/examples/: load_noises.rs  play_vst3.rs  process_wav.rs  scan_plugins.rs
crates/vvdaw-vst3/src/: com.rs  component_handler.rs  host_application.rs  ipc.rs  lib.rs  loader.rs  multiproc.rs  parameter_changes.rs  shm.rs  stream.rs  stream.rs.disabled  wrapper.rs
docs/: 3d_daw_concept_design.md  architecture.md  bevy_physical_lighting_audio_world.md
scripts/: compare_audio.py  setup-vst3-sdk.sh
