[package]
name = "vvdaw-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
default-run = "vvdaw"

[lints]
workspace = true

[[bin]]
name = "vvdaw"
path = "src/main.rs"

[[bin]]
name = "vvdaw-process"
path = "src/bin/process.rs"

[[bin]]
name = "generate-test-wav"
path = "src/bin/generate-test-wav.rs"

[dependencies]
vvdaw-core.workspace = true
vvdaw-audio.workspace = true
vvdaw-plugin.workspace = true
vvdaw-vst3.workspace = true
vvdaw-comms.workspace = true
vvdaw-ui.workspace = true
vvdaw-ui-3d.workspace = true

anyhow.workspace = true
bevy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
hound.workspace = true
