[package]
name = "vvdaw-audio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
vvdaw-core.workspace = true
vvdaw-plugin.workspace = true
vvdaw-comms.workspace = true

cpal.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
dasp.workspace = true
smallvec.workspace = true
