[package]
name = "vvdaw-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
vvdaw-core.workspace = true

thiserror.workspace = true
serde.workspace = true
