[package]
name = "vvdaw-ui-3d"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints.rust]
# Allow unsafe for Send+Sync impls on EventReceiver wrapper (lock-free channel)
# All other workspace lints still apply via inheritance
unsafe_code = "allow"

[lints.clippy]
# Inherit workspace clippy lints
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
module_name_repetitions = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
float_cmp = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"

[dependencies]
# Bevy game engine with 3D rendering
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_pbr",        # PBR rendering for 3D
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "multi_threaded",
    "png",
    "tonemapping_luts", # Required for proper color rendering
    "zstd_rust",       # Required zstd backend for 0.17+
    "x11",             # Linux support
    "wayland",         # Linux Wayland support
] }

# Audio integration
vvdaw-audio = { path = "../vvdaw-audio" }
vvdaw-comms = { path = "../vvdaw-comms" }
vvdaw-core = { path = "../vvdaw-core" }
vvdaw-plugin = { path = "../vvdaw-plugin" }

# Logging
tracing = "0.1"

[dev-dependencies]
anyhow = "1.0"
hound = "3.5"  # WAV file I/O for examples
