[package]
name = "vvdaw-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
vvdaw-core.workspace = true
vvdaw-comms.workspace = true

bevy.workspace = true
anyhow.workspace = true
tracing.workspace = true
