[package]
name = "vvdaw-vst3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

# Note: We override workspace lints to allow unsafe code for FFI
[lints.rust]
unsafe_code = "warn"  # Warn but allow (needed for VST3 FFI)

[lints.clippy]
# Import workspace clippy lints manually
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
module_name_repetitions = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
float_cmp = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"

[dependencies]
vvdaw-core.workspace = true
vvdaw-plugin.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
libloading.workspace = true
serde.workspace = true
serde_json.workspace = true
libc.workspace = true

[build-dependencies]
bindgen.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
vvdaw-audio.workspace = true
vvdaw-comms.workspace = true
hound.workspace = true
serial_test = "3.2"
